# compressor

./: .gitignore  DOCS.md  IDEA.md  config.py  distribution.py  main.py  metrics.py  model.py  optimizers.py  pyproject.toml  task.py  training.py  visualization.py
.serena/: project.yml
configs/: default.yaml
tests/: conftest.py  preview_heatmap.py  test_cmaes.py  test_correlations.py  test_task.py
